# los

./: clean.sh  configure.sh  i686-elf-g++.txt  iso.sh  meson.build  run.sh
kernel/: Makefile  linker.ld  meson.build
kernel/arch/i386/: exceptions.cpp  gdt.cpp  ide.cpp  idt.cpp  keyboard.cpp  paging.cpp  pci.cpp  pic.cpp  ps2.cpp  terminal.cpp
kernel/fs/: fat.cpp
kernel/include/arch/i386/: asm.hpp  gdt.hpp  ide.hpp  idt.hpp  keyboard.hpp  paging.hpp  pci.hpp  ps2.hpp
kernel/include/disk/: disk.hpp
kernel/include/fs/: fat.hpp
kernel/include/kernel/: kpanic.h  kpanic.hpp  log.h  log.hpp  multiboot.h  print.h  print.hpp  printf.h
kernel/include/memory/: frame_allocator.hpp  kernel_location.hpp  liballoc.h
kernel/include/util/: array.hpp  assert.hpp  bits.h  byte_buffer.hpp  enum_flags.hpp  inplace_vector.hpp  math.hpp  memory.hpp  option.h  option.hpp  span.hpp  string.hpp  string_view.hpp  util.hpp  vector.hpp
kernel/kernel/: kernel.cpp  print.cpp  printf.cpp
kernel/memory/: frame_allocator.cpp  heap.cpp  liballoc.cpp  liballoc_hooks.cpp
kernel/util/: assert.cpp  memory.cpp
root/boot/grub/: grub.cfg
